# ScoutMini

./: .gitignore  .gitmodules  AGENTS.md  README.md
ros2_ws/src/map_tools/: README.md  package.xml  setup.py
ros2_ws/src/map_tools/config/: tags_36h11.yaml
ros2_ws/src/map_tools/launch/: zed_apriltag_36h11.launch.py
ros2_ws/src/map_tools/map_tools/: apriltag_tag_collector.py  map_name_publisher.py  waypoint_collector.py  waypoint_navigator.py  waypoint_server.py
ros2_ws/src/map_tools/maps/fuse_3rd/: doors.json  fuse_3rd.pgm  fuse_3rd.sdf  fuse_3rd_original.pgm  fuse_3rd_waypoints.json  tags.json
ros2_ws/src/map_tools/rviz/: waypoint_collector.rviz
ros2_ws/src/scoutmini_nav2/: README.md  package.xml  setup.cfg  setup.py  slam_toolbox_resume_mapping_workflow.md
ros2_ws/src/scoutmini_nav2/config/: mapper_params_online_async.yaml  nav2.yaml  nav2_sim.yaml  rko_lio_vlp16_indoor.yaml  slam_toolbox_online_async.yaml
ros2_ws/src/scoutmini_nav2/launch/: mapping_2d.launch.py  navigation.launch.py  sensors_odometry.launch.py  simulation_2d.launch.py
ros2_ws/src/scoutmini_nav2/maps/: fuse_3rd_floor.pgm  fuse_3rd_floor.yaml
ros2_ws/src/scoutmini_nav2/scoutmini_nav2/: initial_pose_publisher.py
ros2_ws/src/scoutmini_slack/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/scoutmini_slack/config/: slack.env.example
ros2_ws/src/scoutmini_slack/docs/: slack_zenoh_message_contract.md
ros2_ws/src/scoutmini_slack/resource/: scoutmini_slack
ros2_ws/src/scoutmini_slack/scoutmini_slack/: __init__.py  slack_command_bot.py  slack_diagnostics.py  slack_gateway.py  slack_status.py  slack_status_poster.py
ros2_ws/src/scoutmini_slack/scripts/: control_zed_stream.sh  install_user_service.sh  start_slack_bot.sh  start_slack_gateway.sh
ros2_ws/src/scoutmini_slack/systemd/: scoutmini-slack.service
ros2_ws/src/scoutmini_slack/test/: test_control_zed_stream.py  test_slack_diagnostics.py  test_slack_gateway.py  test_slack_status.py
ros2_ws/src/scoutmini_social_navigation/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/scoutmini_social_navigation/config/: adascore_shadow.yaml  social_navigation.yaml
ros2_ws/src/scoutmini_social_navigation/launch/: adascore_shadow.launch.py  gmu_analysis_pipeline.launch.py  people_fusion.launch.py  supervised_motion_gate.launch.py
ros2_ws/src/scoutmini_social_navigation/scoutmini_social_navigation/: __init__.py  bag_analysis_renderer.py  fusion.py  motion_gate.py  motion_gate_node.py  odometry_restamp_node.py  odometry_tf_node.py  pointcloud_restamp_node.py  scan_people_fusion_node.py  shadow_health.py  shadow_health_monitor_node.py  shadow_path_driver_node.py
ros2_ws/src/scoutmini_social_navigation/scripts/: render_gmu_analysis.sh
ros2_ws/src/scoutmini_social_navigation/test/: fusion_smoke.py  test_bag_analysis_renderer.py  test_fusion.py  test_motion_gate.py  test_shadow_health.py
ros2_ws/src/scoutmini_social_perception/: .gitignore  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/scoutmini_social_perception/config/: adascore_shadow_controller.yaml  botsort.yaml  perception.yaml
ros2_ws/src/scoutmini_social_perception/docs/: adascore_dependency_plan.md  adascore_interface_notes.md  adascore_readiness.md  adascore_shadow_bag_validation.md  bag_inventory.md  live_testing_notes.md  model_plan.md  phase_checklist.md  runtime_findings.md  sahi_notes.md  verification_log.md
ros2_ws/src/scoutmini_social_perception/launch/: adascore_adapter_pipeline.launch.py  adascore_dry_run.launch.py  adascore_shadow_controller.launch.py  bag_adascore_shadow_pipeline.launch.py  fake_people_pipeline.launch.py  yolo_people_pipeline.launch.py
ros2_ws/src/scoutmini_social_perception/scoutmini_social_perception/: __init__.py  adascore_people_adapter_node.py  adascore_preflight_check.py  adascore_readiness_check.py  adascore_sfm_shadow_probe.py  bag_io.py  corpus_manifest.py  corpus_runner.py  fake_people_detector_node.py  people_frame_transform_node.py  people_projection_node.py  people_tracker_node.py  perception_bag_validate.py  perception_benchmark_node.py  track_colors.py  track_schema.py  tracking_evaluator.py  yolo_people_detector_node.py
ros2_ws/src/scoutmini_social_perception/scripts/: install_jetson_dependencies.sh  prepare_models.sh  run_tracking_bag.sh
ros2_ws/src/scoutmini_social_perception/test/: bag_reference_report.py  download_acme_gmu_suite.sh  test_bag_io.py  test_corpus_manifest.py  test_corpus_runner.py  test_track_colors.py  test_track_schema.py  test_tracking_evaluator.py  tracking_report.py
ros2_ws/src/scoutmini_streaming/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/scoutmini_streaming/config/: image2rtsp_zed.yaml  mediamtx_zed_webrtc.yml
ros2_ws/src/scoutmini_streaming/launch/: image2rtsp.launch.py  zed_rtsp.launch.py
ros2_ws/src/scoutmini_streaming/resource/: scoutmini_streaming
ros2_ws/src/scoutmini_streaming/scoutmini_streaming/: __init__.py  stream_health.py
ros2_ws/src/scoutmini_streaming/scripts/: check_zed_stream_stack.sh  collect_zed_stream_diagnostics.sh  install_mediamtx_local.sh  install_user_service.sh  reset_zed_usb.sh  start_zed_rtsp_stack.sh  start_zed_webrtc_stack.sh  stop_zed_stream_stack.sh  stream_health.sh
ros2_ws/src/scoutmini_streaming/systemd/: scoutmini-webrtc.service
ros2_ws/src/scoutmini_streaming/test/: install_mediamtx_local.sh  record_zed_debug_bag.sh  reset_zed_usb.sh  smoke_test_zed_webrtc_stack.sh  start_standalone_zed_rtsp.sh  tailscale_robot_setup.md  test_stream_health.py  view_zed_rtsp_lan.sh  view_zed_rtsp_ssh_tunnel.sh
ros2_ws/src/scoutmini_tasks/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/scoutmini_tasks/config/: route_loop_runner.yaml
ros2_ws/src/scoutmini_tasks/launch/: route_loop_runner.launch.py
ros2_ws/src/scoutmini_tasks/resource/: scoutmini_tasks
ros2_ws/src/scoutmini_tasks/scoutmini_tasks/: __init__.py  door_aware_route_runner.py  door_scan_filter.py  elevator_sequence.py  nav_to_pose_runner.py  route_loop_runner.py  slack_command_bot.py  slack_gateway.py  slack_status.py  slack_status_poster.py
(+155 files in other folders)
