<?xml version="1.0"?>
<package format="3">
  <name>scoutmini_slack</name>
  <version>0.0.1</version>
  <description>Slack integration nodes and scripts for ScoutMini.</description>

  <maintainer email="noreply@example.com">nle</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>scoutmini_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
