<?xml version="1.0"?>
<package format="3">
  <name>scoutmini_tasks</name>
  <version>0.0.1</version>
  <description>Task nodes for ScoutMini (route runner, tasks)</description>

  <maintainer email="noreply@example.com">nle</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>map_tools</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
